sumo/tests/od2trips/errors/format/amitran/origin_missing/errors.od2trips
Error: Attribute 'origin' is missing in definition of odPair '0'.
Error: Missing origin '' (100.00 vehicles).
Error: Loading failed.
Quitting (on error).
